Fixed misaligned social icons

--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -1239,7 +1239,12 @@ footer a:focus {
     background: #E5E5E5;
     border-radius: 50%;
     margin-right: 20px;
-    padding: 9px 10px 6px 10px;
+    width: 38px !important;
+    height: 38px !important;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
 }
 
 .footer-social i {
